unpackaged/objects/Album__c.object
<CustomObject>
    <fields>
        <fullName>AlbumImg__c</fullName>
        <label>AlbumImg</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Artist__c</fullName>
        <label>Artist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageAlbum__c</fullName>
        <formula>IMAGE(AlbumImg__c, &quot;yellow&quot;, 250, 250)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImageAlbum</label>
        <type>Text</type>
    </fields>
    <label>Album</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Album Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Albums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>